se agrega el Proyecto

--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
         <div class="min-size"> 
             <a href="">Forgot your password?</a><br />
             <br> 
-            <center><button type="submit" id="logIn">Log in</button></center>  
+            <center><button type="submit" id="logIn">LOG IN</button></center>  
             <br>     
             Don't you have an account? <a href="signup.html">Sign up</a>
         </div>
