--- a/signup.html
+++ b/signup.html
@@ -56,7 +56,7 @@
         <div class="min-size">
             <input type="checkbox">Accept <a href="">Terms and Conditions</a><br>
             <br>  
-            <center><button type="submit" id="signUp">Sign up</button></center>  
+            <center><button type="submit" id="signUp">SIGN UP</button></center>  
             <br>
             Already have an account? <a href="login.html">Log in</a>
         </div>  
