--- a/signup.html
+++ b/signup.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="signupestilo.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>TeachMe</title>
 </head>
 <body>
-    <form action="https://formspree.io/f/mpzbkrej" method="post"autocomplete="off">
+    <div>
+        <img class="background" src="images/teachme-2.png">
+    </div>
+    <form class="form-signup" action="https://formspree.io/f/mpzbkrej" method="post"autocomplete="off">
         <div>
             <h3>> Sign up</h3><br>
             <h2>Welcome to TeachMe !</h2>
@@ -16,12 +19,12 @@
             <br>
             <center>
                 <button class="botones" type="button">
-                    <img src="fotos1/google1.png">
+                    <img src="images/google1.png">
                     Continue with Google
                 </button>
 
                 <button class="botones" type="button">
-                    <img src="fotos1/facebook1.png">
+                    <img src="images/facebook1.png">
                     Continue with Facebook
                 </button>
             </center>
